Fix CourseSeeder to pick from correct area. Add Requested and tolerance to CourseDetailsView.kt Move New Course Dialog into Seed From existing Controls. Warn if an axisting course is too long to be used.